/**
* @file     trigger.proto
* @author   huangchuan
* @details
* @date     2023-08-23
* @version  V1.0
* @copyright(C),changan,2050
**********************************************************************************
* @attention 信号注释规则：
* ///<name ：[uint],(default,min,max),[max_number],(factor,offset),description 
* ///<信号名称：[单位],(默认值、最小值、最大值),[repeated最大值],（因数，偏移量）,信号描述
* ///<coordinate:  COORDINATE_SYSTEM_VEHICLE_BASE 
* ///<数据记录B类事件trigger --B类事件：不需要采集模块触发的事件
*
* @par      修改日志：
* <table>
* <tr><th>date              <th>version             <th>author
* <tr><th>2023.8.23          <th>1.0                 <th>huangchuan 
* <table>
**********************************************************************************
*/

syntax="proto3"; 
package	AdrTrigger;
/**
* @brief UploadStatus
* @detail UploadStatus
*/
message UploadStatus{
	///< status: [/],(/，/,/),[/],(1,0),status
    bool status = 1;		
	///< 时间戳: [s],(/，/,/),[/],(1,0),时间戳
	double time_stamp = 2;
} 